i18n infrastructure, extract strings

--- a/src/server_manager/index.html
+++ b/src/server_manager/index.html
@@ -18,7 +18,6 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Content-Language" content="en">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
   <link rel="shortcut icon" href="/ui_components/images/favicon.png">
@@ -26,6 +25,7 @@
   <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="import" href="/bower_components/app-layout/app-toolbar/app-toolbar.html">
   <link rel="import" href="/ui_components/app-root.html">
+  <script src="/bower_components/outline-i18n/index.js"></script>
   <script src="server_manager/web_app/main.js"></script>
 
   <!-- TODO: Add Outline servers to connect-src on-demand (in addition to the DigitalOcean API). -->
@@ -47,7 +47,7 @@
   <title>Outline Manager</title>
 </head>
 
-<body dir='ltr' class='page-cloud-install'>
+<body dir="ltr">
   <app-root id="appRoot"></app-root>
 </body>
 
