--- a/src/server_manager/ui_components/outline-about-dialog.html
+++ b/src/server_manager/ui_components/outline-about-dialog.html
@@ -62,16 +62,15 @@
       <div>
         <img id="outlineLogo" src="images/manager-about-logo2x.png">
       </div>
-      <p id='version'>Version [[outlineVersion]]</p>
-      <p>Outline is an open source project created by <a href="https://jigsaw.google.com/">Jigsaw</a> to provide a safer way for news organizations and journalists to access the internet.  Learn more about Outline on <a href="https://s3.amazonaws.com/outline-vpn/index.html">our website</a>.</p>
-      <p>Outline is powered by <a href="https://shadowsocks.org">Shadowsocks</a> and is still an early stage project.  You can contribute to the code on <a href="https://github.com/jigsaw-Code/?q=outline">GitHub</a>, and follow us on <a href="https://www.reddit.com/r/outlinevpn/">Reddit</a> and <a href="https://medium.com/jigsaw">Medium</a> to hear when we expand to more platforms and add new features.</p>
+      <p id='version' inner-h-t-m-l="[[localize('about-version', 'version', outlineVersion)]]"></p>
+      <p inner-h-t-m-l="[[localize('about-outline', 'jigsawUrl', 'https://jigsaw.google.com', 'shadowsocksUrl', 'https://shadowsocks.org', 'gitHubUrl', 'https://github.com/jigsaw-Code/?q=outline', 'redditUrl', 'https://www.reddit.com/r/outlinevpn', 'mediumUrl', 'https://medium.com/jigsaw')]]">></p>
       <p>
         <a href="https://jigsaw.google.com/">
           <img src="images/jigsaw-logo.svg">
         </a>
       </p>
       <div class="buttons">
-        <paper-button dialog-dismiss autofocus>Close</paper-button>
+        <paper-button dialog-dismiss autofocus>[[localize('close')]]</paper-button>
       </div>
     </paper-dialog>
   </template>
@@ -80,6 +79,7 @@
     Polymer({
       is: 'outline-about-dialog',
       properties: {
+        localize: {type: Function, readonly: true},
         outlineVersion: String
       },
       open: function () {
