--- a/src/server_manager/ui_components/outline-do-oauth-step.html
+++ b/src/server_manager/ui_components/outline-do-oauth-step.html
@@ -71,50 +71,50 @@
 
     <iron-pages id='pages' attr-for-selected='id' selected='{{ currentPage }}'>
       <outline-step-view id="connectAccount">
-        <span slot="step-title">Sign in or create an account with DigitalOcean.</span>
-        <span slot="step-description">With your account, Outline makes it easy to create a server and get connected.</span>
+        <span slot="step-title">[[localize('oauth-connect-title')]]</span>
+        <span slot="step-description">[[localize('oauth-connect-description')]]</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/digital_ocean_logo.svg" />
-            <p>Waiting to connect your account...</p>
+            <p>[[localize('oauth-connect-tag')]]</p>
           </div>
-          <paper-button on-tap="_cancelTapped">Cancel</paper-button>
+          <paper-button on-tap="_cancelTapped">[[localize('cancel')]]</paper-button>
         </paper-card>
       </outline-step-view>
 
       <outline-step-view id="verifyEmail">
-        <span slot="step-title">Activate you DigitalOcean account.</span>
-        <span slot="step-description">Check your inbox for an email from DigitalOcean, and click the link in it to confirm your account.</span>
+        <span slot="step-title">[[localize('oauth-activate-account')]]</span>
+        <span slot="step-description">[[localize('oauth-verify')]]</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/do_oauth_email.svg" />
-            <p>Confirm your email...</p>
+            <p>[[localize('oauth-verify-tag')]]</p>
           </div>
-        <paper-button on-tap="_cancelTapped">Sign Out</paper-button>
+        <paper-button on-tap="_cancelTapped">[[localize('oauth-sign-out')]]</paper-button>
         </paper-card>
       </outline-step-view>
 
       <outline-step-view id="enterBilling">
-        <span slot="step-title">Activate you DigitalOcean account.</span>
-        <span slot="step-description">Enter your billing information on digitalocean.com and return to the app once you are done.</span>
+        <span slot="step-title">[[localize('oauth-activate-account')]]</span>
+        <span slot="step-description">[[localize('oauth-billing')]]</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/do_oauth_billing.svg" />
-            <p>Enter billing information...</p>
+            <p>[[localize('oauth-billing-tag')]]</p>
           </div>
-        <paper-button on-tap="_cancelTapped">Sign Out</paper-button>
+        <paper-button on-tap="_cancelTapped">[[localize('oauth-sign-out')]]</paper-button>
         </paper-card>
       </outline-step-view>
 
       <outline-step-view id="accountActive">
-        <span slot="step-title">Activate you DigitalOcean account.</span>
-        <span slot="step-description">Your DigitalOcean account has been activated.</span>
+        <span slot="step-title">[[localize('oauth-activate-account')]]</span>
+        <span slot="step-description">[[localize('oauth-account-active')]]</span>
         <paper-card class="card">
           <div class="container">
             <img src="images/do_oauth_done.svg" />
-            <p>Account activated! Loading server locations...</p>
+            <p>[[localize('oauth-account-active-tag')]]</p>
           </div>
-        <paper-button disabled>Sign Out</paper-button>
+        <paper-button disabled>[[localize('oauth-sign-out')]]</paper-button>
         </paper-card>
       </outline-step-view>
     </iron-pages>
@@ -131,6 +131,10 @@
         cancelButtonText: {
           type: String,
           value: 'Cancel'
+        },
+        localize: {
+          type: Function,
+          readonly: true
         },
         onCancel: Function
       },
