--- a/src/server_manager/ui_components/outline-server-settings.html
+++ b/src/server_manager/ui_components/outline-server-settings.html
@@ -120,23 +120,23 @@
         <div class="setting card-section" hidden$="[[!isServerManaged]]">
           <img class="setting-icon digital-ocean-icon" src="images/do_white_logo.svg"/>
           <div>
-            <h3>Digital Ocean</h3>
-            <paper-input readonly value="[[serverLocation]]" label="Server location" hidden$="[[!serverLocation]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverMonthlyCost]] USD/month" label="Montly cost" hidden$="[[!serverMonthlyCost]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverMonthlyTransferLimit]]" label="Transfer limit" hidden$="[[!serverMonthlyTransferLimit]]" always-float-label maxlength="100"></paper-input>
+            <h3>DigitalOcean</h3>
+            <paper-input readonly value="[[serverLocation]]" label="[[localize('settings-server-location')]]" hidden$="[[!serverLocation]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverMonthlyCost]] USD/month" label="[[localize('settings-server-cost')]]" hidden$="[[!serverMonthlyCost]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverMonthlyTransferLimit]]" label="[[localize('settings-transfer-limit')]]" hidden$="[[!serverMonthlyTransferLimit]]" always-float-label maxlength="100"></paper-input>
           </div>
         </div>
         <div class="setting card-section">
           <iron-icon class="setting-icon" icon="outline-iconset:outline"></iron-icon>
           <div>
-            <h3>Server Information</h3>
-            <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="Name" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
-            <p class="detail">Set a new name for your server. Note that this will not be reflected on the devices of the users that you invited to connect to it.</p>
-            <paper-input readonly value="[[serverPortForNewAccessKeys]]" label="Port for new access keys" hidden$="[[!serverPortForNewAccessKeys]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverHostname]]" label="Hostname" hidden$="[[!serverHostname]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverManagementApiUrl]]" label="Management API URL" hidden$="[[!serverManagementApiUrl]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverCreationDate]]" label="Created" hidden$="[[!serverCreationDate]]" always-float-label maxlength="100"></paper-input>
-            <paper-input readonly value="[[serverId]]" label="Server ID" hidden$="[[!serverId]]" always-float-label maxlength="100"></paper-input>
+            <h3>[[localize('settings-server-info')]]</h3>
+            <paper-input id="serverNameInput" class="server-name" value="{{name}}" label="[[localize('settings-server-name')]]" always-float-label maxlength="100" on-keydown="_handleNameInputKeyDown" on-blur="_handleNameInputBlur"></paper-input>
+            <p class="detail">[[localize('settings-server-rename')]]</p>
+            <paper-input readonly value="[[serverPortForNewAccessKeys]]" label="[[localize('settings-access-key-port')]]" hidden$="[[!serverPortForNewAccessKeys]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverHostname]]" label="[[localize('settings-server-hostname')]]" hidden$="[[!serverHostname]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverManagementApiUrl]]" label="[[localize('settings-server-api-url')]]" hidden$="[[!serverManagementApiUrl]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverCreationDate]]" label="[[localize('settings-server-creation')]]" hidden$="[[!serverCreationDate]]" always-float-label maxlength="100"></paper-input>
+            <paper-input readonly value="[[serverId]]" label="[[localize('settings-server-id')]]" hidden$="[[!serverId]]" always-float-label maxlength="100"></paper-input>
           </div>
         </div>
         <!-- Metrics controls -->
@@ -144,10 +144,10 @@
           <iron-icon class="setting-icon" icon="editor:insert-chart"></iron-icon>
           <div>
             <div id="metricsHeader">
-              <h3>Share anonymous metrics</h3>
+              <h3>[[localize('settings-metrics-header')]]</h3>
               <paper-checkbox id="metricsCheckbox" checked="{{metricsEnabled}}"></paper-checkbox>
             </div>
-            <p>Share anonymized metrics to help improve the reliability and performance of Outline, for you and for those you share your server with. <a class="link" href="https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection">Learn more</a>.</p>
+            <p inner-h-t-m-l="[[localize('metrics-description', 'openLink', '<a class=link href=https://s3.amazonaws.com/outline-vpn/index.html#/en/support/dataCollection>', 'closeLink', '</a>')]]"></p>
           </div>
         </div>
       </div>
@@ -169,6 +169,7 @@
         serverLocation: {type: String, value: null},
         serverMonthlyCost: {type: String, value: null},
         serverMonthlyTransferLimit: {type: String, value: null},
+        localize: {type: Function, readonly: true},
       },
       update: function(name, metricsEnabled) {
         this.initialName = name;
